#ngx-bootstrap Datepicker

--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -61,6 +61,10 @@
           <option value="4">Management</option> -->
         </select>
       </div>
+      <div class="form-group">
+          <label for="dateOfBirth">Date Of Birth</label>
+          <input id="dateOfBirth" [(ngModel)]="dateOfBirth" name="dateOfBirth" class="form-control" type="text" bsDatepicker>
+        </div>
       <div class="panel-footer">
         <button type="submit" class="btn btn-primary">Save</button>
       </div>
