--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -4,10 +4,10 @@
       <h3 class="panel-title">Employee Create</h3>
     </div>
     <div class="panel-body">
-      <div class="form-group" [class.has-error]="name.invalid || name.touched" [class.has-success]="name.valid">
+      <div class="form-group" [class.has-error]="name.invalid && name.touched" [class.has-success]="name.valid">
         <label class="control-label" for="name">Name</label>
-        <input id="name" [(ngModel)]="employee.name" name="name" class="form-control" type="text" #name="ngModel">
-        <span class="help-block" *ngIf = "name.invalid || name.touched">Name Required</span>
+        <input required id="name" [(ngModel)]="employee.name" name="name" class="form-control" type="text" #name="ngModel">
+        <span class="help-block" *ngIf = "name.invalid && name.touched">Name Required</span>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
